--- a/XRouteTestClient/XRouteTestClient.csproj
+++ b/XRouteTestClient/XRouteTestClient.csproj
@@ -115,7 +115,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XServer-partial.cs" />
-    <Compile Include="XServer_1_16.cs" />
+    <Compile Include="XServer.cs" />
     <EmbeddedResource Include="DynamicInfoForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DynamicInfoForm.cs</DependentUpon>
