--- a/XRouteTestClient/XRouteTestClient.csproj
+++ b/XRouteTestClient/XRouteTestClient.csproj
@@ -18,11 +18,12 @@
     </SccAuxPath>
     <SccProvider>
     </SccProvider>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation />
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +41,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -149,10 +153,6 @@
       <SubType>Designer</SubType>
       <DependentUpon>RouteManoeuvre_Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SegmentAttributesForm.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>SegmentAttributesForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="TextsForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>TextsForm.cs</DependentUpon>
@@ -190,14 +190,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="SegmentAttributesForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SegmentAttributesForm.Designer.cs">
-      <DependentUpon>SegmentAttributesForm.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="favicon.ico" />
     <Content Include="Versions.info.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
