--- a/XRouteTestClient/Properties/Settings.settings
+++ b/XRouteTestClient/Properties/Settings.settings
@@ -45,16 +45,16 @@
       <Value Profile="(Default)">truckfast</Value>
     </Setting>
     <Setting Name="y2" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">6350326</Value>
+      <Value Profile="(Default)">7501785</Value>
     </Setting>
     <Setting Name="x2" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">676464</Value>
+      <Value Profile="(Default)">4182599</Value>
     </Setting>
     <Setting Name="y1" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">6467100</Value>
+      <Value Profile="(Default)">4677217</Value>
     </Setting>
     <Setting Name="x1" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">668425</Value>
+      <Value Profile="(Default)">-1017459</Value>
     </Setting>
     <Setting Name="scroll" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">30</Value>
