--- a/XRouteTestClient/Properties/Settings.settings
+++ b/XRouteTestClient/Properties/Settings.settings
@@ -42,19 +42,19 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ProfileRoute" Type="System.String" Scope="User">
-      <Value Profile="(Default)">truckfast</Value>
+      <Value Profile="(Default)">carfast</Value>
     </Setting>
     <Setting Name="y2" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">7501785</Value>
+      <Value Profile="(Default)">6661181</Value>
     </Setting>
     <Setting Name="x2" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">4182599</Value>
+      <Value Profile="(Default)">498064</Value>
     </Setting>
     <Setting Name="y1" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">4677217</Value>
+      <Value Profile="(Default)">6648688</Value>
     </Setting>
     <Setting Name="x1" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">-1017459</Value>
+      <Value Profile="(Default)">479526</Value>
     </Setting>
     <Setting Name="scroll" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">30</Value>
@@ -225,13 +225,13 @@
       <Value Profile="(Default)">-8</Value>
     </Setting>
     <Setting Name="Route_Color" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">Blue</Value>
+      <Value Profile="(Default)">Black</Value>
     </Setting>
     <Setting Name="Route_Width" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">-5</Value>
+      <Value Profile="(Default)">2</Value>
     </Setting>
     <Setting Name="Priority_Route" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">100</Value>
+      <Value Profile="(Default)">25000</Value>
     </Setting>
     <Setting Name="Priority_Toll" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1100</Value>
@@ -420,7 +420,26 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="XMLSNIPPET" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">&lt;Profile&gt;
+  &lt;Common language="en" majorVersion="1" minorVersion="0"/&gt;
+  &lt;Routing majorVersion="2" minorVersion="0"&gt;
+    &lt;Course&gt;
+      &lt;AdditionalDataRules enabled="true"/&gt;
+    &lt;/Course&gt;
+  &lt;/Routing&gt;
+  &lt;FeatureLayer majorVersion="1" minorVersion="0"&gt;
+    &lt;GlobalSettings enableTimeDependency="true"/&gt;
+    &lt;Themes&gt;
+      &lt;Theme id="PTV_TrafficIncidents" enabled="true"&gt;
+        &lt;FeatureDescription includeTimeDomain="true" includeLanguageCode="true"&gt;
+          &lt;Property id="*" included="true"/&gt;
+          &lt;Property id="message" included="true"/&gt;
+        &lt;/FeatureDescription&gt;
+      &lt;/Theme&gt;
+    &lt;/Themes&gt;
+  &lt;/FeatureLayer&gt;
+&lt;/Profile&gt;
+</Value>
     </Setting>
     <Setting Name="xroute_username" Type="System.String" Scope="User">
       <Value Profile="(Default)">xtok</Value>
