--- a/XRouteTestClient/XRouteTestClient.csproj
+++ b/XRouteTestClient/XRouteTestClient.csproj
@@ -189,6 +189,7 @@
     </Compile>
     <None Include="app.config" />
     <None Include="bin\Release\XRouteTestClient.exe.config" />
+    <None Include="Properties\DataSources\XServer.CommuterTravelTrend.datasource" />
     <None Include="Properties\DataSources\XServer.Emissions.datasource" />
     <None Include="Properties\DataSources\XServer.EmissionsHBEFA31.datasource" />
     <None Include="Properties\DataSources\XServer.EmissionsHBEFA32.datasource" />
@@ -205,7 +206,7 @@
     <None Include="Properties\DataSources\XServer.WayPoint.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
     </None>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -216,6 +217,9 @@
   <ItemGroup>
     <Content Include="bin\Release\XRouteTestClient.exe" />
     <Content Include="favicon.ico" />
+    <Content Include="snippet.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Versions.info.txt" />
   </ItemGroup>
   <ItemGroup>
