--- a/XRouteTestClient/XRouteTestClient.csproj
+++ b/XRouteTestClient/XRouteTestClient.csproj
@@ -63,6 +63,18 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GeoAPI, Version=1.7.4.0, Culture=neutral, PublicKeyToken=a1a0da7def465678, processorArchitecture=MSIL">
+      <HintPath>..\packages\GeoAPI.1.7.4\lib\net45\GeoAPI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NetTopologySuite, Version=1.14.0.0, Culture=neutral, PublicKeyToken=f580a05016ebada1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NetTopologySuite.1.14\lib\net45\NetTopologySuite.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PowerCollections, Version=1.0.0.0, Culture=neutral, PublicKeyToken=2573bf8a1bdddcd5, processorArchitecture=MSIL">
+      <HintPath>..\packages\NetTopologySuite.1.14\lib\net45\PowerCollections.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -189,6 +201,7 @@
     </Compile>
     <None Include="app.config" />
     <None Include="bin\Release\XRouteTestClient.exe.config" />
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\XServer.CommuterTravelTrend.datasource" />
     <None Include="Properties\DataSources\XServer.Emissions.datasource" />
     <None Include="Properties\DataSources\XServer.EmissionsHBEFA31.datasource" />
@@ -206,19 +219,21 @@
     <None Include="Properties\DataSources\XServer.WayPoint.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="xserver_cs.bat" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Release\XRouteTestClient.exe" />
     <Content Include="favicon.ico" />
     <Content Include="snippet.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Versions.info.txt" />
   </ItemGroup>
