--- a/XRouteTestClient/app.config
+++ b/XRouteTestClient/app.config
@@ -4,40 +4,9 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="XRouteTestClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="XRouteTestClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
   </configSections>
   <applicationSettings>
     <XRouteTestClient.Properties.Settings>
-      <setting name="scroll" serializeAs="String">
-        <value>30</value>
-      </setting>
-    </XRouteTestClient.Properties.Settings>
-  </applicationSettings>
-  <userSettings>
-    <XRouteTestClient.Properties.Settings>
-      <setting name="UrlRoute" serializeAs="String">
-        <value>http://localhost:50030/xroute/ws/XRoute</value>
-      </setting>
-      <setting name="UrlMap" serializeAs="String">
-        <value>http://localhost:50010/xmap/ws/XMap</value>
-      </setting>
-      <setting name="ProfileRoute" serializeAs="String">
-        <value>truckfast</value>
-      </setting>
-      <setting name="x1" serializeAs="String">
-        <value>4.177775</value>
-      </setting>
-      <setting name="y1" serializeAs="String">
-        <value>51.922923</value>
-      </setting>
-      <setting name="x2" serializeAs="String">
-        <value>5.0406243</value>
-      </setting>
-      <setting name="y2" serializeAs="String">
-        <value>52.124376</value>
-      </setting>
       <setting name="OPTIMIZATION" serializeAs="String">
         <value />
       </setting>
@@ -69,10 +38,34 @@
         <value />
       </setting>
       <setting name="REQUEST_VERSION" serializeAs="String">
-        <value>1.20</value>
+        <value>1.22</value>
       </setting>
       <setting name="COUNTRY_ENCODING" serializeAs="String">
         <value />
+      </setting>
+      <setting name="ProfileRoute" serializeAs="String">
+        <value>truckfast</value>
+      </setting>
+      <setting name="y2" serializeAs="String">
+        <value>52.124376</value>
+      </setting>
+      <setting name="x2" serializeAs="String">
+        <value>5.0406243</value>
+      </setting>
+      <setting name="y1" serializeAs="String">
+        <value>51.922923</value>
+      </setting>
+      <setting name="x1" serializeAs="String">
+        <value>4.177775</value>
+      </setting>
+      <setting name="scroll" serializeAs="String">
+        <value>30</value>
+      </setting>
+      <setting name="UrlRoute" serializeAs="String">
+        <value>http://localhost:50030/xroute/ws/XRoute</value>
+      </setting>
+      <setting name="UrlMap" serializeAs="String">
+        <value>http://localhost:50010/xmap/ws/XMap</value>
       </setting>
       <setting name="LinkType_START" serializeAs="String">
         <value>AUTO_LINKING</value>
@@ -87,15 +80,6 @@
         <value />
       </setting>
       <setting name="IS_DESTTIME" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="DYNAMIC_PROFILE" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ENABLE_DYNAMIC" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ROADEDITOR_ATTRIBUTESET" serializeAs="String">
         <value />
       </setting>
       <setting name="DetailLevel" serializeAs="String">
@@ -113,12 +97,6 @@
       <setting name="ROADEDITOR_ADDITIONAL_OPTIONS" serializeAs="String">
         <value />
       </setting>
-      <setting name="START_TIME_ROADEDITOR" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="DISTANCE_MEASURE" serializeAs="String">
-        <value />
-      </setting>
       <setting name="ROUTING_RECTANGLE" serializeAs="String">
         <value />
       </setting>
@@ -134,14 +112,8 @@
       <setting name="ENABLE_ROADEDITOR" serializeAs="String">
         <value />
       </setting>
-      <setting name="STREET" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ExceptionPath_AbsMalus" serializeAs="String">
-        <value>0</value>
-      </setting>
       <setting name="ExceptionPath_RelMalus" serializeAs="String">
-        <value>0</value>
+        <value />
       </setting>
       <setting name="ExceptionPath_Street" serializeAs="String">
         <value />
@@ -149,20 +121,14 @@
       <setting name="ExceptionPath_BinaryPathDescription" serializeAs="String">
         <value />
       </setting>
-      <setting name="ExceptionPath_ExtSegments" serializeAs="String">
-        <value />
-      </setting>
       <setting name="AVOID_LOW_EMISSION_ZONES" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="DYNAMIC_TIME_ON_STATICROUTE" serializeAs="String">
         <value />
       </setting>
       <setting name="ViaRadius" serializeAs="String">
         <value>1000</value>
       </setting>
       <setting name="ViaX" serializeAs="String">
-        <value>932930</value>
+        <value />
       </setting>
       <setting name="ViaY" serializeAs="String">
         <value />
@@ -314,9 +280,6 @@
       <setting name="ShowScale" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="RETOUR" serializeAs="String">
-        <value>False</value>
-      </setting>
       <setting name="vp_TYPE" serializeAs="String">
         <value />
       </setting>
@@ -374,12 +337,6 @@
       <setting name="Icon_Segments_NoStandard_Add" serializeAs="String">
         <value>n_marker1.bmp</value>
       </setting>
-      <setting name="CostsDistance" serializeAs="String">
-        <value>1,1,1,1,1,1,1,1</value>
-      </setting>
-      <setting name="CostsPeriod" serializeAs="String">
-        <value>1,1,1,1,1,1,1,1</value>
-      </setting>
       <setting name="ROUTELISTMANOEUVRES" serializeAs="String">
         <value>False</value>
       </setting>
@@ -407,9 +364,6 @@
       <setting name="DynamicInfo" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="Tolldate" serializeAs="String">
-        <value />
-      </setting>
       <setting name="vp_EMPTY_WEIGHT" serializeAs="String">
         <value />
       </setting>
@@ -421,15 +375,6 @@
       </setting>
       <setting name="SPEED_INFOS" serializeAs="String">
         <value>true</value>
-      </setting>
-      <setting name="XMLSNIPPET" serializeAs="String">
-        <value>
-          &lt;Profile&gt;
-          &lt;Common language="en" majorVersion="1" minorVersion="0"/&gt;
-          &lt;Routing majorVersion="2" minorVersion="0"&gt;
-
-          &lt;/Profile&gt;
-        </value>
       </setting>
       <setting name="xServerUserName" serializeAs="String">
         <value>xtok</value>
@@ -443,8 +388,14 @@
       <setting name="Route_Width" serializeAs="String">
         <value>2</value>
       </setting>
+      <setting name="TollDate" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ExceptionPath_AbsMalus" serializeAs="String">
+        <value />
+      </setting>
     </XRouteTestClient.Properties.Settings>
-  </userSettings>
+  </applicationSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
