--- a/XRouteTestClient/app.config
+++ b/XRouteTestClient/app.config
@@ -8,40 +8,40 @@
   <applicationSettings>
     <XRouteTestClient.Properties.Settings>
       <setting name="OPTIMIZATION" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_TOLLROADS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_VIGNETTEROADS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_HIGHWAYS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_FERRIES" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_RESIDENTS_ONLY" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_URBAN_AREAS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_RAMPS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="EXCLUDE_COUNTRIES" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ROUTING_COUNTRIES" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="REQUEST_VERSION" serializeAs="String">
         <value>1.22</value>
       </setting>
       <setting name="COUNTRY_ENCODING" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ProfileRoute" serializeAs="String">
         <value>truckfast</value>
@@ -77,10 +77,10 @@
         <value>OG_GEODECIMAL</value>
       </setting>
       <setting name="START_TIME" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="IS_DESTTIME" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="DetailLevel" serializeAs="String">
         <value>STANDARD</value>
@@ -89,49 +89,49 @@
         <value>False</value>
       </setting>
       <setting name="LOW_EMISSION_ZONE_TYPE" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ROUTE_LANGUAGE" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ROADEDITOR_ADDITIONAL_OPTIONS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ROUTING_RECTANGLE" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ROADEDITOR_LAYERNAME" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="GENERATE_EXTWAYPOINTS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="EXPERT_OPTIONS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ENABLE_ROADEDITOR" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ExceptionPath_RelMalus" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ExceptionPath_Street" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ExceptionPath_BinaryPathDescription" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="AVOID_LOW_EMISSION_ZONES" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ViaRadius" serializeAs="String">
         <value>1000</value>
       </setting>
       <setting name="ViaX" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ViaY" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="SegmentAttributes" serializeAs="String">
         <value>False</value>
@@ -170,7 +170,7 @@
         <value>True</value>
       </setting>
       <setting name="ManoeuvreGroup_Ratio" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Waypoint_START" serializeAs="String">
         <value>flaggreen.bmp</value>
@@ -281,43 +281,43 @@
         <value>True</value>
       </setting>
       <setting name="vp_TYPE" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_TOTAL_WEIGHT" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_TRAILER_WEIGHT" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_AXLE_WEIGTH" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_NUMBER_OF_AXLES" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_EMISSION_CLASS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_HEIGHT" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_LENGTH" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_WIDTH" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_CYLINDER_CAPACITY" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_NUMBER_OF_PASSENGERS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_TRAILER_HAS_BREAKS" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_FUEL_TYPE" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Visibility_Segments" serializeAs="String">
         <value>False</value>
@@ -359,19 +359,19 @@
         <value>flagred.bmp</value>
       </setting>
       <setting name="GEODATASOURCE_LAYER" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="DynamicInfo" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="vp_EMPTY_WEIGHT" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_EMISSION_TECHNOLOGY" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="vp_LOAD_WEIGHT" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="SPEED_INFOS" serializeAs="String">
         <value>true</value>
@@ -380,7 +380,7 @@
         <value>xtok</value>
       </setting>
       <setting name="xServerPassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ProfileMap" serializeAs="String">
         <value>silkysand</value>
@@ -389,10 +389,10 @@
         <value>2</value>
       </setting>
       <setting name="TollDate" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ExceptionPath_AbsMalus" serializeAs="String">
-        <value />
+        <value/>
       </setting>
     </XRouteTestClient.Properties.Settings>
   </applicationSettings>
@@ -414,5 +414,5 @@
   </runtime>
   <startup>
     
-  <supportedRuntime version="v2.0.50727"/></startup>
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
 </configuration>
